--- a/index.css
+++ b/index.css
@@ -96,7 +96,7 @@ section{
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image: linear-gradient(to left,rgba(0,0,0,0.6),rgba(0,0,0,0.3)),url(/images/lake.jpg);
+    background-image: linear-gradient(to left,rgba(0,0,0,0.6),rgba(0,0,0,0.3)),url(images/lake.jpg);
     background-size: cover;
     background-position: bottom center;
     display: flex;
